@@ -57,6 +57,7 @@ Misc:
  - Debugger: Print breakpoint/watchpoint number when inserting
  - Qt: Open a message box for Qt frontend errors
  - GBA Video: Clean up dead code in sprite rendering loop
+ - FFmpeg: Support audio-only recording
 
 0.7.1: (2019-02-24)
 Bugfixes:
